[gd_scene load_steps=7 format=3 uid="uid://dptgbm5nvy2jx"]

[ext_resource type="Script" uid="uid://baaeuuqvywtou" path="res://Scenes/pause_manager.gd" id="1_62x2w"]
[ext_resource type="Texture2D" uid="uid://6a5tn1krhtis" path="res://resource/UI/Pause/ART_UI_MAIN_PauseScreen_BG.png" id="1_rcrlu"]
[ext_resource type="Texture2D" uid="uid://nfar2kodqodl" path="res://resource/UI/Pause/ART_UI_MAIN_PauseScreen_QuitButton.png" id="2_62x2w"]
[ext_resource type="Texture2D" uid="uid://cg54q3flyd1lm" path="res://resource/UI/Pause/ART_UI_MAIN_PauseScreen_ReturnToTitle.png" id="3_x18bf"]
[ext_resource type="Texture2D" uid="uid://vjstvkvk30ht" path="res://resource/UI/Pause/ART_UI_MAIN_PauseScreen_ResumeButton.png" id="4_iuqmy"]
[ext_resource type="Texture2D" uid="uid://pqllrot5o65k" path="res://resource/UI/Pause/ART_UI_MAIN_PauseScreen_SettingsIcon.png" id="5_y8bj1"]

[node name="PauseManager" type="CanvasLayer"]
script = ExtResource("1_62x2w")

[node name="Background" type="TextureRect" parent="."]
visible = false
offset_right = 1920.0
offset_bottom = 1083.0
texture = ExtResource("1_rcrlu")

[node name="QuitButton" type="TextureRect" parent="."]
visible = false
offset_left = 108.0
offset_top = 932.0
offset_right = 384.0
offset_bottom = 1024.0
texture = ExtResource("2_62x2w")

[node name="ReturnButton" type="TextureRect" parent="."]
visible = false
offset_left = 103.0
offset_top = 829.0
offset_right = 500.0
offset_bottom = 922.0
texture = ExtResource("3_x18bf")

[node name="ResumeButton" type="TextureRect" parent="."]
visible = false
offset_left = 108.0
offset_top = 720.0
offset_right = 392.0
offset_bottom = 821.0
texture = ExtResource("4_iuqmy")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_left = 1819.0
offset_top = 25.0
offset_right = 1898.0
offset_bottom = 104.0
texture = ExtResource("5_y8bj1")
